fix: checkstyle and warnings